--- a/src/App.css
+++ b/src/App.css
@@ -231,11 +231,10 @@ body {
   display: flex;
   flex-direction: row;
   width: 100%;
-  height: 15vh;
   justify-content: space-between;
   align-items: center;
   align-content: center;
-  padding: 0 5%;
+  padding: 12px 5%;
   box-sizing: border-box;
 }
 
@@ -366,7 +365,7 @@ body {
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 15vh;
+  height: 70px;
   background-color: black;
   margin-top: 250px;
 }
@@ -930,7 +929,7 @@ body {
   min-height: 100vh;
   background-color: black;
   overflow-y: auto;
-  padding-bottom: 15vh; /* add this line */
+  padding-bottom: 70px;
 }
 
 .email {
