--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
-  display: flex;
-  height: 100vh;
+  /* display: flex;
+  height: 100vh; */
 }
 
 /* #root {
@@ -15,7 +15,7 @@ body {
 
 #root {
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
   text-align: center;
   background-color: white;
 }
@@ -242,7 +242,7 @@ body {
   display: flex;
   flex-direction: row;
   width: 100%;
-  height: 15vh;
+  /* height: 15vh; */
   justify-content: space-between;
   align-items: center;
   align-content: center;
@@ -330,7 +330,7 @@ body {
   box-sizing: border-box;
   text-decoration: none;
   color: black;
-  position: fixed;
+  /* position: fixed; */
   top: 0;
 }
 
@@ -368,6 +368,7 @@ body {
   height: 70px;
   background-color: black;
   margin-top: 250px;
+  z-index: 100;
 }
 
 .foota {
@@ -925,6 +926,7 @@ body {
 }
 
 .bodyy1 {
+  padding-top: 70px;
   width: 100vw;
   min-height: 100vh;
   background-color: black;
