--- a/src/App.css
+++ b/src/App.css
@@ -1853,6 +1853,7 @@ input[type="file"] {
   border-radius: 50%;
   background: black;
     z-index: 1;
+  border: none;
 }
 /* Textarea styling */
 .text-status-input {
